--- a/index.html
+++ b/index.html
@@ -61,6 +61,209 @@
           />
         </div>
       </div>
+
+      <!-- sponsor -->
+
+      <div class="sponsor-container">
+        <img src="./influencer-gear/logos/Alibaba.svg" alt="" />
+        <img src="./influencer-gear/logos/Amazon.svg" alt="" />
+        <img src="./influencer-gear/logos/Daraz.pk Logo.svg" alt="" />
+        <img src="./influencer-gear/logos/Ebay.svg" alt="" />
+        <img src="./influencer-gear/logos/Rakuten.svg" alt="" />
+        <img src="./influencer-gear/logos/Target.svg" alt="" />
+        <img src="./influencer-gear/logos/Walmart.svg" alt="" />
+      </div>
+
+      <!-- popular collection -->
+      <div class="box-container">
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/tripod.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Flex Tripod</h2></div>
+          <div class="box-prize">
+            <h3>$50.24</h3>
+          </div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 99
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/setup.png" alt="" />
+          </div>
+          <div class="box-title">
+            <h2>Photoshoot set</h2>
+          </div>
+          <div class="box-prize">
+            <h3>$95.5</h3>
+          </div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 26
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/mic.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Microphone</h2></div>
+          <div class="box-prize"><h3>$100.8</h3></div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 29
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/camera.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Vlogging Camera</h2></div>
+          <div class="box-prize"><h3>$100.7</h3></div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 99
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/airpod.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Airbuds</h2></div>
+          <div class="box-prize"><h3>$50.94</h3></div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 29
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/single-light.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Green Screen</h2></div>
+          <div class="box-prize"><h3>$59.5</h3></div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 69
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/lights.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Light Setup</h2></div>
+          <div class="box-prize"><h3>$45.5</h3></div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 89
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/action.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Action Camera</h2></div>
+          <div class="box-prize"><h3>$80.2</h3></div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 99
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="./influencer-gear/images/drone.png" alt="" />
+          </div>
+          <div class="box-title"><h2>Drone</h2></div>
+          <div class="box-prize"><h3>$90.4</h3></div>
+          <div class="box-rate">
+            <h6>
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i> 4. 2
+            </h6>
+          </div>
+          <div class="box-subtitle">
+            <p>
+              Wordwide shifting <br />available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="see-more"><h4>See More</h4></div>
+      </div>
     </main>
 
     <footer></footer>
